@@ -1010,7 +1010,7 @@ END
 IDD_SEQUENCER DIALOGEX 0, 0, 70, 329
 STYLE WS_CHILD
 EXSTYLE WS_EX_STATICEDGE
-FONT 8, "Tahoma"
+FONT 8, "Tahoma", 0, 0, 0x1
 BEGIN
     CONTROL         "Follow song",IDC_FOLLOW,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,5,218,62,8
@@ -2172,22 +2172,25 @@ BEGIN
                     172,26
 END
 
-IDD_SWINGFILL DIALOG DISCARDABLE  0, 0, 192, 86
+IDD_SWINGFILL DIALOG DISCARDABLE  0, 0, 177, 86
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Swing Fill"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,135,45,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,135,65,50,14
-    RTEXT           "Variance (%):",IDC_STATIC,0,25,75,15,SS_CENTERIMAGE
-    RTEXT           "Center Tempo (BPM):",IDC_STATIC,0,5,75,15,
+    DEFPUSHBUTTON   "OK",IDOK,115,45,55,14
+    PUSHBUTTON      "Cancel",IDCANCEL,115,65,55,14
+    RTEXT           "Variance (%):",IDC_STATIC,0,25,68,15,SS_CENTERIMAGE
+    RTEXT           "Tempo (BPM):",IDC_STATIC,0,5,68,15,SS_CENTERIMAGE
+    RTEXT           "Cycle Length (lines):",IDC_STATIC,0,45,68,15,
                     SS_CENTERIMAGE
-    RTEXT           "Width (lines):",IDC_STATIC,0,45,75,15,SS_CENTERIMAGE
-    EDITTEXT        IDC_CENTER_TEMPO,80,5,50,15,ES_AUTOHSCROLL
-    EDITTEXT        IDC_VARIANCE,80,25,50,15,ES_AUTOHSCROLL
-    EDITTEXT        IDC_WIDTH,80,45,50,15,ES_AUTOHSCROLL
-    RTEXT           "Phase (degrees):",IDC_STATIC,0,65,75,15,SS_CENTERIMAGE
-    EDITTEXT        IDC_PHASE,80,65,50,15,ES_AUTOHSCROLL
+    EDITTEXT        IDC_CENTER_TEMPO,70,5,40,15,ES_AUTOHSCROLL
+    EDITTEXT        IDC_VARIANCE,70,25,40,15,ES_AUTOHSCROLL
+    EDITTEXT        IDC_WIDTH,70,45,40,15,ES_AUTOHSCROLL
+    RTEXT           "Phase (degrees):",IDC_STATIC,0,65,68,15,SS_CENTERIMAGE
+    EDITTEXT        IDC_PHASE,70,65,40,15,ES_AUTOHSCROLL
+    CONTROL         "Actual BPM",IDC_OFFSET,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,115,5,55,15
+    CTEXT           "Unchecked = Center BPM",IDC_STATIC,115,20,60,20
 END
 
 
@@ -2216,7 +2219,7 @@ BEGIN
     IDD_SWINGFILL, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 185
+        RIGHTMARGIN, 170
         TOPMARGIN, 7
         BOTTOMMARGIN, 79
     END
